<resources>
    <string name="app_name">Android Labs</string>

    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>

    <string name="Text1">Look at my GUI</string>
    <string name="Text2">Click Here</string>
    <string name="Text3">Check this out</string>
    <string name="Text4">Switch on/off</string>
    <string name="Text5">Type here</string>

    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="goChat">GO TO CHAT</string>
</resources>
