<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/testView"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text1" />

    <Button
        android:id="@+id/button"
        android:layout_below="@+id/testView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text2" />

    <CheckBox
        android:layout_below="@+id/testView"
        android:layout_above="@+id/image"
        android:layout_toEndOf="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text3" />

    <ImageButton
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@+id/button"
        android:src="@drawable/flag" />

    <Switch
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text4" />

    <EditText
        android:layout_below="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Text5" />
</RelativeLayout>